<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/home"
            android:id="@+id/hom"
            android:icon="@drawable/home_red">
        </item>

        <item
            android:title="@string/send_feedback"
            android:id="@+id/feed"
            android:icon="@drawable/message">
        </item>
        <item
            android:title="@string/rate_this_app"
            android:id="@+id/rate"
            android:icon="@drawable/star">
        </item>
        <item
            android:title="Share"
            android:id="@+id/share"
            android:icon="@drawable/share">
        </item>

    </group>
    <item android:title="Advance Options">
        <menu>
            <item
                android:title="Tools"
                android:id="@+id/tools"
                android:icon="@drawable/hammer">
            </item>
        </menu>
    </item>
</menu>