<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/linear"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".MainActivity1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:cardElevation="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bebold">

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customfonts"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/strings_app"
        android:gravity="center"
        android:textColor="@color/colorAccent"/>
    <android.support.v7.widget.CardView
        android:layout_width="350dp"
        android:layout_height="200dp"
        app:cardElevation="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Android"
                android:textColor="@android:color/white"
                android:textSize="35sp" />
               <RadioGroup
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <RadioButton
                       android:id="@+id/radioButton1"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/defaults"
                       android:background="@android:color/holo_orange_light"
                       android:textColor="@android:color/white"/>
                   <RadioButton
                       android:id="@+id/radioButton2"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="Custom Font 1"
                       android:background="@android:color/holo_orange_light"
                       android:textColor="@android:color/white"/>
                   <RadioButton
                       android:id="@+id/radioButton3"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="Custom Font 2"
                       android:background="@android:color/holo_orange_light"
                       android:textColor="@android:color/white"/>
                   <RadioButton
                       android:id="@+id/radioButton4"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="Custom Font 3"
                       android:background="@android:color/holo_orange_light"
                       android:textColor="@android:color/white"/>

               </RadioGroup>



        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>